--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=
-OWNER_ID=
-MONGO_URL=
-OWNER_USERNAME=
+BOT_TOKEN= "8044536901:AAEdh9Pj3iCvEF_r5aKASuXoY9d4VSaQ-to"
+OWNER_ID= "8009369344"
+MONGO_URL= "mongodb+srv://theriyamusic94:f67KlgTyzr3TTutn@cluster0.lym5x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+OWNER_USERNAME= "ksdofficial84"
